[package]
name = "olsen"
version = "0.1.0"
authors = ["Kit Lane <lanechr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/bevyengine/bevy.git", branch="main" }
lazy_static = "*"